Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
 
 <ul>
 <li>
-<a href="http://arxiv.org/abs/1510.00259">A Generative Model of Words and Relationships from Multiple Sources</a>; to appear in Proceedings of the <a href="https://www.aaai.org/Conferences/AAAI/aaai16.php">Thirtieth AAAI Conference on Artificial Intelligence 2016</a>
+<a href="http://arxiv.org/abs/1510.00259">A Generative Model of Words and Relationships from Multiple Sources</a> - Stephanie L. Hyland, Theofanis Karaletsos, Gunnar Rätsch; to appear in Proceedings of the <a href="https://www.aaai.org/Conferences/AAAI/aaai16.php">Thirtieth AAAI Conference on Artificial Intelligence 2016</a>
 </li>
-<li>Knowledge Transfer with Medical Language Embeddings; to appear at the <a href="http://www.dmmh.org/sdm16">Fifth Workshop on Data Mining for Medicine and Healthcare</a> at the 16th SIAM International Conference on Data Mining (SDM 2016)</li>
+<li>
+<a href="http://arxiv.org/abs/1602.03551">Knowledge Transfer with Medical Language Embeddings</a> - Stephanie L. Hyland, Theofanis Karaletsos, Gunnar Rätsch; to appear at the <a href="http://www.dmmh.org/sdm16">Fifth Workshop on Data Mining for Medicine and Healthcare</a> at the 16th SIAM International Conference on Data Mining (SDM 2016)</li>
 </ul>
       </section>
       <footer>
